Added modals and control layers

--- a/about.html
+++ b/about.html
@@ -1,132 +1,34 @@
-<!DOCTYPE html>
-<html lang='en'>
+---
+layout: default
+---
 
-<!-- Default Layout -->
-
-  <head>
-    <title>CartoLib</title>
-
-    <meta charset='utf-8'>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Styles -->
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="css/jquery-ui.css"/>
-    <link href="https://cartodb-libs.global.ssl.fastly.net/cartodb.js/v3/3.15/themes/css/cartodb.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/custom.css">
-
-    <!-- CDN for getting Font Awesome icons -->
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Istok+Web" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-
-
-    <!-- JavaScript -->
-    <script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false&libraries=places"></script>
-
-    <script type="text/javascript" src="js/lib/jquery.min.js"></script>
-    <script type="text/javascript" src="js/lib/cartodb.js"></script>
-    <script type="text/javascript" src="js/lib/leaflet-google.js"></script>
-    <script type="text/javascript" src="js/lib/cartoLib.js"></script>
-    <script type="text/javascript" src="js/chicago_gardens.js"></script>
-
-  </head>
-  <body>
-    <nav class="navbar navbar-inverse">
-      <div class="container-fluid">
-          <div class="navbar-header container-fluid">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <div class="navbar-brand">
-            <a class="hidden-xs" href="index.html"><img class="hidden-xs" style="width: 3.5em; height: 3.5em; margin-right: 1.25em" src="images/logo.png"/>The Chicago Urban Agriculture Mapping Project</a><a style="font-size: 0.75em; text-align: center;" class="visible-xs" href="index.html">Chicago Urban Agriculture Mapping Project</a></p>
-            </div>
-          </div>
-        </div>
-
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav pull-right" id="dropdown-results">
-              <li>
-                <a href="about.html"><i class="fa fa-info-circle" aria-hidden="true"></i> What We Are</a>
-              </li>
-              <li>
-                <a href="form.html"><i class="fa fa-plus-circle" aria-hidden="true"></i> Add a New Location</a>
-              </li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
-
-    <div class='row'>
-      <div class='container'>
-        <div class='col-md-12'>
-          <h2 style="text-align: center"><strong><u>What We Are</u></strong></h2>
-        </div>
-        <div class='col-md-1'></div>
-        <div class='col-md-10'>
-            <br><p>The Chicago Urban Agriculture Mapping Project (CUAMP) is an ongoing collaboration between individuals, organizations, businesses and institutions that has sought to collaboratively map and inventory urban agriculture and community gardens in Chicago since 2010. It includes everything from small residential gardens to commercial urban farms. With an interactive map and directory that link to detailed profiles for each growing site, CUAMP aims to provide the public with a comprehensive and constantly evolving look at the state of urban agriculture in Chicagoland. The administration team currently consists of <a href="http://neighbor-space.org/" target="_blank"><u>NeighborSpace</u></a>, <a href="https://auachicago.org/" target="_blank"><u>Advocates for Urban Agriculture</u></a>, and <a href="http://steans.depaul.edu/" target="_blank"><u>DePaul University's Irwin W. Steans Center</u></a>.</p>
-        </div>
-        <div class='col-md-12'>
-          <h2 style="text-align: center"><br><strong><u>How We Help</u></strong></h2>
-        </div>
-        <div class='col-md-1'></div>
-        <div class='col-md-10'>
-            <br><p>CUAMP is not a research project, but rather a collection of information on urban agriculture for the sole purpose of immediately making it available to the public as a resource. The design of CUAMP takes into consideration that different individuals, organizations and institutions have different goals in conducting the inventory/map and will use the information for different purposes. Practitioners, researchers, non-profits, individuals and government agencies will each use sections of the inventory that are most relevant to their educational, research, policy, and informational purposes.</p>
-        </div>
-        <div class='col-md-12'>
-          <h2 style="text-align: center"><br><strong><u>How You Help</u></strong></h2>
-        </div>
-        <div class='col-md-1'></div>
-        <div class='col-md-10'>
-            <br><p>Efforts to conduct the inventory are being led by supporters of urban agriculture throughout Chicago. No single individual or organization has ownership of the information and participation is voluntary. CUAMP is a collaborative endeavor that welcomes participation by anyone with an interest in promoting urban agriculture in Chicago. Essentially, CUAMP consists of the submissions made by contributors to the urban agriculture inventory. Contributors are therefore defined as individuals or organizations that submit information into the inventory.</p>
-        </div>
-        <div class='col-md-12'>
-          <h2 style="text-align: center"><br><strong><u>Handling Privacy</u></strong></h2>
-        </div>
-        <div class='col-md-1'></div>
-        <div class='col-md-10'>
-            <br><p>It is CUAMP’s goal that as much of the urban agriculture inventory as possible will be publicly accessible. However, CUAMP recognizes that some of the data collected could need to remain anonymous. Therefore growing sites have the option to specify that certain fields, such as location and contact information, not be made publicly accessible. Administrators will not take any actions that could lead to this information being made public in any venue.<br></p>
-        </div>
-      </div>
-    </div>
-
-  </body>
-
-  <footer>
-    <div class="panel panel-footer container-fluid">
-      <div class='col-md-3'>  
-        <h3 style="line-height: 2em">Connect With Us:</h3>
-      </div>
-      <div class='col-md-3 hidden-xs'>
-        <h4><a href="http://neighbor-space.org/" target="_blank">NeighborSpace</a></h4>
-          <p>445 N Sacramento Blvd, Suite 204<br>Chicago, IL 60612<br>Phone: (773) 826-3240<br>Fax: (773) 442-0299<br><a href="mailto:info@neighbor-space.org">info@neighbor-space.org</a></p>
-      </div>
-      <div class='col-md-3 visible-xs'>
-        <h4><a href="http://neighbor-space.org/" target="_blank">NeighborSpace</a></h4>
-          <p>Phone: (773) 826-3240</p>
-      </div>
-      <div class='col-md-3 hidden-xs'>
-        <h4><a href="https://auachicago.org/" target="_blank">Advocates for Urban Agriculture</a></h4>
-          <p><a href="https://www.facebook.com/AUAChicago"><i class="fa fa-facebook-square" aria-hidden="true"></i> Facebook</a><br><a href="https://twitter.com/AUAChicago"><i class="fa fa-twitter-square" aria-hidden="true"></i> Twitter</a><br><a href="mailto:info@auachicago.org">info@auachicago.org</a></p>
-      </div>
-      <div class='col-md-3 visible-xs'>
-        <h4><a href="https://auachicago.org/" target="_blank">Advocates for Urban Agriculture</a></h4>
-          <p><a href="mailto:info@auachicago.org">info@auachicago.org</a></p>
-      </div>
-      <div class='col-md-3 hidden-xs'>
-        <h4><a href="http://steans.depaul.edu/" target="_blank">DePaul University — Steans Center</a></h4>
-          <p>2233 N. Kenmore Ave.<br>Chicago, IL 60614<br>Phone: (773) 325-7457<br>Fax: (773) 325-7459</p>
-      </div>
-      <div class='col-md-3 visible-xs'>
-        <h4><a href="http://steans.depaul.edu/" target="_blank">DePaul University — Steans Center</a></h4>
-          <p>Phone: (773) 325-7457</p>
-      </div>
-    </div>
-  </footer>
-  
-</html>
-
-
+<div class='row'>
+  <div class='col-md-12'>
+    <h2 style="text-align: center"><strong><u>What We Are</u></strong></h2>
+  </div>
+  <div class='col-md-1'></div>
+  <div class='col-md-10'>
+      <br><p style="text-align: center">The Chicago Urban Agriculture Mapping Project (CUAMP) is an ongoing collaboration between individuals, organizations, businesses and institutions that has sought to collaboratively map and inventory urban agriculture and community gardens in Chicago since 2010. It includes everything from small residential gardens to commercial urban farms. With an interactive map and directory that link to detailed profiles for each growing site, CUAMP aims to provide the public with a comprehensive and constantly evolving look at the state of urban agriculture in Chicagoland. The administration team currently consists of <a href="http://neighbor-space.org/" target="_blank"><u>NeighborSpace</u></a>, <a href="https://auachicago.org/" target="_blank"><u>Advocates for Urban Agriculture</u></a>, and <a href="http://steans.depaul.edu/" target="_blank"><u>DePaul University's Irwin W. Steans Center</u></a>.</p>
+  </div>
+  <div class='col-md-12'>
+    <h2 style="text-align: center"><br><strong><u>How We Help</u></strong></h2>
+  </div>
+  <div class='col-md-1'></div>
+  <div class='col-md-10'>
+      <br><p style="text-align: center">CUAMP is not a research project, but rather a collection of information on urban agriculture for the sole purpose of immediately making it available to the public as a resource. The design of CUAMP takes into consideration that different individuals, organizations and institutions have different goals in conducting the inventory/map and will use the information for different purposes. Practitioners, researchers, non-profits, individuals and government agencies will each use sections of the inventory that are most relevant to their educational, research, policy, and informational purposes.</p>
+  </div>
+  <div class='col-md-12'>
+    <h2 style="text-align: center"><br><strong><u>How You Help</u></strong></h2>
+  </div>
+  <div class='col-md-1'></div>
+  <div class='col-md-10'>
+      <br><p style="text-align: center">Efforts to conduct the inventory are being led by supporters of urban agriculture throughout Chicago. No single individual or organization has ownership of the information and participation is voluntary. CUAMP is a collaborative endeavor that welcomes participation by anyone with an interest in promoting urban agriculture in Chicago. Essentially, CUAMP consists of the submissions made by contributors to the urban agriculture inventory. Contributors are therefore defined as individuals or organizations that submit information into the inventory.</p>
+  </div>
+  <div class='col-md-12'>
+    <h2 style="text-align: center"><br><strong><u>Handling Privacy</u></strong></h2>
+  </div>
+  <div class='col-md-1'></div>
+  <div class='col-md-10'>
+      <br><p style="text-align: center">It is CUAMP’s goal that as much of the urban agriculture inventory as possible will be publicly accessible. However, CUAMP recognizes that some of the data collected could need to remain anonymous. Therefore growing sites have the option to specify that certain fields, such as location and contact information, not be made publicly accessible. Administrators will not take any actions that could lead to this information being made public in any venue.<br></p>
+  </div>
+</div>
