--- a/index.html
+++ b/index.html
@@ -81,15 +81,26 @@ layout: default
         <span class="input-group-addon"><i class="fa fa-usd fa-fw" aria-hidden="true"></i></span>
         <select class="data-array-ownership form-control" id="search-ownership" multiple="multiple"></select>
       </div>
+    </div>
 
-      <div class="input-group select2-bootstrap-prepend m-top-sm">
-        <span class="input-group-addon"><i class="fa fa-users fa-fw" aria-hidden="true"></i></span>
-        <select class="data-array-community form-control" id="search-community" multiple="multiple"></select>
+    <p><br><strong>Select other preferences</strong></p>
+    <div>
+      <div class="checkbox m-top-sm">
+        <label class="leaf-box">
+          <input type="checkbox" id="search-community">
+            <i class="fa fa-fw fa-circle-o unchecked"></i>
+            <i class="fa fa-fw fa-leaf checked" id="leafbox"></i>
+          Community Garden
+        </label>
       </div>
 
-      <div class="input-group select2-bootstrap-prepend m-top-sm m-bottom-sm">
-        <span class="input-group-addon"><i class="fa fa-cutlery fa-fw" aria-hidden="true"></i></span>
-        <select class="data-array-production form-control" id="search-production" multiple="multiple"></select>
+      <div class="checkbox m-top-sm m-bottom-sm">
+        <label class="leaf-box">
+          <input type="checkbox" id="search-production">
+            <i class="fa fa-fw fa-circle-o unchecked"></i>
+            <i class="fa fa-fw fa-leaf checked" id="leafbox"></i>
+          Food Producing
+        </label>
       </div>
     </div>
 
