--- a/form.html
+++ b/form.html
@@ -4,7 +4,7 @@ layout: default
 <div class='row'>
   <div class="col-md-12">
     <h2><strong>Add a New Location:</strong></h2>
-    <h4>Do you know an awesome community garden we don't have listed? Tell us about it!</h4>
+    <h4>Do you know an awesome community garden that we don't have listed? Tell us about it!</h4>
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdDA_DbIKDI1vkRUxppzCCG2N0EytwxnHQ9pqCmz076ly5yWQ/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
   </div>
 </div>
