Played with original filters

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ layout: default
     <div>
       <div class="checkbox m-top-sm">
         <label class="leaf-box">
-          <input type="checkbox" id="search-community" value="true">
+          <input type="checkbox" id="search-community">
             <i class="fa fa-fw fa-circle-o unchecked"></i>
             <i class="fa fa-fw fa-leaf checked" id="leafbox"></i>
           Community Garden
