Finished boolean filters

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ layout: default
 
       <div class="checkbox m-top-sm m-bottom-sm">
         <label class="leaf-box">
-          <input type="checkbox" id="search-production" value="true">
+          <input type="checkbox" id="search-production">
             <i class="fa fa-fw fa-circle-o unchecked"></i>
             <i class="fa fa-fw fa-leaf checked" id="leafbox"></i>
           Food Producing
