--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ layout: default
         <option value="" selected disabled="">Within:</option>
         <option value='400'>2 blocks</option>
         <option value='805'>1/2 mile</option>
-        <option value='1610'>1 mile</option>
+        <option value='1610' selected="selected">1 mile</option>
         <option value='3220'>2 miles</option>
         <option value='8050'>5 miles</option>
       </select>
